syntax = "proto3";

// External APIs of Titus cloud simulator. The cloud simulator impersonates clound and Mesos subsystems, to simplify
// large scale control plane performance testing.
//

package com.netflix.titus.simulator;

import "google/protobuf/empty.proto";
import "netflix/titus/titus_job_api.proto";

// ----------------------------------------------------------------------------
// Instance group / instance entity model.

message SimulatedComputeResources {
    uint32 cpu = 1;
    uint32 gpu = 2;
    uint32 memoryMB = 3;
    uint32 diskMB = 4;
    uint32 networkMB = 5;
}

message SimulatedInstance {

    enum SimulatedInstanceState {
        Running = 0;
        Terminated = 1;
    }

    string id = 1;

    string instanceGroupId = 2;

    string hostname = 3;

    string ipAddress = 4;

    SimulatedInstanceState state = 5;

    SimulatedComputeResources allComputeResources = 6;

    SimulatedComputeResources availableComputeResources = 7;

    map<string, string> attributes = 8;

    uint64 launchTime = 9;
}

message SimulatedInstanceGroup {

    message Capacity {
        uint32 min = 1;
        uint32 desired = 2;
        uint32 max = 3;
    }

    string id = 1;

    string instanceType = 2;

    Capacity capacity = 3;

    repeated string instanceIds = 4;

    SimulatedComputeResources computeResources = 5;

    uint32 ipPerEni = 6;
}

// ----------------------------------------------------------------------------
// Task / offer model.

message SimulatedOffer {
    string offerId = 1;

    string instanceId = 2;

    string instanceHostname = 3;

    SimulatedComputeResources resources = 4;

    map<string, string> attributes = 5;
}

message SimulatedOfferEvent {
    SimulatedOffer offer = 1;
    bool rescinded = 2;
}

message SimulatedTask {

    string taskId = 1;

    string instanceId = 2;

    SimulatedComputeResources computeResources = 3;

    bool allocateIpAddress = 4;

    string eniLabel = 5;

    repeated string securityGroups = 6;

    map<string, string> env = 7;

    string taskState = 8;

    string message = 9;
}

message SimulatedTaskStatus {

    enum SimulatedTaskState {

        Launched = 0;

        StartInitiated = 1;

        Started = 2;

        KillInitiated = 3;

        Finished = 4;

        Failed = 5;

        Lost = 6;

        Killed = 7;
    }

    message SimulatedNetworkConfiguration {
        bool isRoutableIP = 1;

        string ipAddress = 2;

        string eniIPAddress = 3;

        string eniID = 4;

        string resourceID = 5;
    }

    string taskId = 1;

    string instanceId = 2;

    SimulatedTaskState taskState = 3;

    string message = 5;

    SimulatedNetworkConfiguration networkConfiguration = 6;
}

// ----------------------------------------------------------------------------
// GRPC services

message AddInstanceGroupRequest {
    string id = 1;
    string instanceType = 2;
    int32 min = 3;
    int32 desired = 4;
    int32 max = 5;
}

message Id {
    string id = 1;
}

message Ids {
    repeated string ids = 1;
}

message CapacityUpdateRequest {
    string instanceGroupId = 1;
    SimulatedInstanceGroup.Capacity capacity = 2;
}

message TasksLaunchRequest {
    repeated SimulatedTask tasks = 1;
    repeated string offerIds = 2;
}

message TasksLaunchRequests {
    repeated TasksLaunchRequest launchRequests = 1;
}

service SimulatedAgentService {

    rpc AddInstanceGroup (AddInstanceGroupRequest) returns (google.protobuf.Empty) {
    }

    rpc GetAllInstanceGroups (google.protobuf.Empty) returns (stream SimulatedInstanceGroup) {
    }

    rpc GetInstanceGroups (Ids) returns (stream SimulatedInstanceGroup) {
    }

    rpc GetInstancesOfInstanceGroup (Id) returns (stream SimulatedInstance) {
    }

    rpc GetInstances (Ids) returns (stream SimulatedInstance) {
    }

    rpc UpdateCapacity (CapacityUpdateRequest) returns (google.protobuf.Empty) {
    }

    rpc RemoveInstanceGroup (Id) returns (google.protobuf.Empty) {
    }

    rpc TerminateInstance (Id) returns (google.protobuf.Empty) {
    }

    rpc TerminateAndShrinkInstance (Id) returns (google.protobuf.Empty) {
    }
}

service SimulatedMesosService {

    rpc OfferStream (google.protobuf.Empty) returns (stream SimulatedOfferEvent) {
    }

    rpc DeclineOffer (Id) returns (google.protobuf.Empty) {
    }

    rpc TaskStatusUpdateStream (google.protobuf.Empty) returns (stream SimulatedTaskStatus) {
    }

    rpc LaunchTasks (TasksLaunchRequests) returns (google.protobuf.Empty) {
    }

    rpc KillTask (Id) returns (google.protobuf.Empty) {
    }

    rpc Reconcile (Ids) returns (google.protobuf.Empty) {
    }
}
